fix: improve Android production compatibility